2000-05-21  Rosanna Yuen  <rosanna_yuen@yahoo.com>

	* hopscotch.scm (check-to-foundation): disallow putting cards on
	top of kings.
	* first_law.scm (button-released): removed movability of cards
	so that only clicking works.  Simplifies code and fixes seg fault.

2000-05-09  Martin Baulig  <baulig@suse.de>

	* sol.c (main): Call gnome_score_init () to fix security
	exploit to group games.

2000-04-26  Valek Filippov  <frob@df.ru>

	* menu.c: Changed jrb e-mail to jrb@redhat.com to reflect
	          the AUTHORS file. (from kanikus)

2000-04-22  Ian Peters  <itp@gnu.org>

	* sol.c: main_prog: pop the visual and colormap when we're done setting
	  stuff up, fixes black about dialog on multi-depth displays

1999-09-22  Dave Camp  <campd@oit.edu>

	* Makefile.am (INCLUDES): Use $(GUILE_INCS)

1999-08-12  Rosanna Yuen  <rwsy@mit.edu>

	* odessa.scm : fixed double clicking bug so that a) it doesn't
	crash and b)the next card flips up if necessary. 

1999-08-09  Robert Brady  <rwb197@ecs.soton.ac.uk

	* sol.c : applied Irix compiling fix from David Kaelbling 
	  <drk@sgi.com> : [bug #1781].
	
1999-08-03  Rosanna Yuen  <rwsy@mit.edu>

	* straight_up.scm (game-continuable): makes sure the game knows
	that its done.
	(button-double-clicked): fixed it so double click function doesn't
	get called unless 1) there's a card and 2) it is visible.

1999-08-01  Rosanna Yuen  <rwsy@mit.edu>

	* kansas.scm (check-a-tableau): made the hint function for this
	game smarter than me.

1999-07-25  Rosanna Yuen  <rwsy@mit.edu>

	* eagle_wing.scm (complete-transaction): fixed the status bar
	message discrepancy in this game.

1999-07-23  Rosanna Yuen  <rwsy@mit.edu>

	* kansas.scm (empty-tableau?): makes sure that no cards can be
	moved down before game is officially over.

1999-07-23  Robert Brady <rwb197@ecs.soton.ac.uk>

	* events.c: Fixed bug #1192 (dragging a card to the toolbar and
	releasing mouse button there caused odd things).

1999-07-10  Rosanna Yuen  <rwsy@mit.edu>
