@@ -1,3 +1,7 @@
+2000-05-22  Ian Peters  <itp@gnu.org>
+
+	* maze.scm: added to cvs (not distributed by default yet)
+
 2000-05-21  Rosanna Yuen  <rosanna_yuen@yahoo.com>
 
 	* hopscotch.scm (check-to-foundation): disallow putting cards on
